@@ -1,0 +1,3 @@
+<?xml version="1.0"?>
+<object name="MailHost" meta_type="Mail Host" smtp_host="mail.gocept.net"
+   smtp_port="25" smtp_pwd="" smtp_uid=""/>
